<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorit_tambah"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorit"
        app:showAsAction="always" />
    <item
        android:id="@+id/setting_page"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="always" />
    <group android:menuCategory="container">
        <item android:id="@+id/search_page"
            android:title="@string/page_search"
            android:icon = "@drawable/ic_baseline_search_24"/>
        <item android:id="@+id/favorit_page"
            android:icon="@drawable/ic_favorite"
            android:title="@string/page_favorit" />
        <item android:id="@+id/favorit_delete"
            android:title="@string/delete_favorit" />
    </group>
</menu>